--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,15 @@ main:
   - name: Contact
     url: '#contact'
     weight: 60
+  - name: Experience
+    url: '#experience'
+    weight: 60
+  - name: Posts
+    url: '#posts'
+    weight: 60
+  - name: Publications
+    url: '#publications'
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
