--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,12 +10,13 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
+  - name: Experience
+    url: '#experience'
+    weight: 630
   - name: Contact
     url: '#contact'
     weight: 60
-#   - name: Experience
-#     url: '#experience'
-#     weight: 60
+  
 #   - name: Posts
 #     url: '#posts'
 #     weight: 60
