--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,16 +10,17 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
+  - name: Posts
+    url: '#posts'
+    weight: 30
   - name: Experience
     url: '#experience'
-    weight: 630
+    weight: 30
   - name: Contact
     url: '#contact'
     weight: 60
   
-#   - name: Posts
-#     url: '#posts'
-#     weight: 60
+  
 #   - name: Publications
 #     url: '#publications'
 #     weight: 60
