--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Posts
     url: '#posts'
     weight: 30
+  - name: Publications
+    url: '#publications'
+    weight: 30
   - name: Experience
     url: '#experience'
     weight: 30
@@ -20,10 +23,6 @@ main:
     url: '#contact'
     weight: 60
   
-  
-#   - name: Publications
-#     url: '#publications'
-#     weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
