--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,6 +19,9 @@ main:
   - name: Experience
     url: '#experience'
     weight: 30
+   - name: Accomplishments
+    url: '#accomplishments'
+    weight: 30
   - name: Contact
     url: '#contact'
     weight: 60
