--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: Rose
-  theme_night: Rose
-  font: Rose
+  theme_day: Strawberry
+  theme_night: Strawberry
+  font: Strawberry
   font_size: M
 
 # SEO
