--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: 1950s
-  theme_night: 1950s
-  font: 1950s
+  theme_day: Forest
+  theme_night: Forest
+  font: Forest
   font_size: M
 
 # SEO
